# gba-plusplus

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  libgba++.dox
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  requirements.txt
docs/gba/: gba.rst  integer_types.rst  memmapio.rst
docs/gba/display/: display_control.rst  interrupt_status.rst
docs/gba/registers/: display.rst
docs/gba/types/: int_type.rst  memmap.rst
gba++/: vs2019.sln  vs2019.vcxproj  vs2019.vcxproj.filters
include/gba/: allocator.hpp  background_control.hpp  backgrounds.hpp  bios.hpp  bios_asm.hpp  bios_fixed_point.hpp  bios_swi.hpp  bit.hpp  bit_bool.hpp  bit_cast.hpp  blending.hpp  bool.hpp  bool_type.hpp  color.hpp  const.hpp  cpu.hpp  display.hpp  display_control.hpp  display_status.hpp  dma.hpp  dma_control.hpp  drawing.hpp  fixed_point.hpp  frac.hpp  gba.hpp  graphics.hpp  graphics_surface.hpp  heap.hpp  int.hpp  int_type.hpp  interrupt.hpp  interrupt_handler.hpp  io_display.hpp  io_interrupt.hpp  io_keypad.hpp  io_reg.hpp  io_sound.hpp  io_system.hpp  irq.hpp  irq_conditional.hpp  (+37 more)
include/gba/allocator/: background.hpp  bitset.hpp  bitset_types.hpp  buffer.hpp  mode0.hpp  mode1.hpp  mode2.hpp  mode3.hpp  mode4.hpp  mode5.hpp  oam.hpp  object_tile.hpp  palette.hpp  screen_affine.hpp  screen_regular.hpp  tile_4bpp.hpp  tile_4bpp_2d.hpp  tile_8bpp.hpp  tile_8bpp_2d.hpp  vram.hpp
include/gba/bios/: affine.hpp  compression.hpp  cpu_copy.hpp  halt.hpp  huff.hpp  lz77.hpp  math.hpp  reset.hpp  rle.hpp  sound.hpp  swi.hpp  (+1 more)
src/: iwram_allocator.cpp  tiny_alloc.cpp
(+108 files in other folders)
